--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-md-8">
+    <h2><%= @post.title %></p>
     <p><%= @post.body %></p>
   </div>
   <div class="col-md-4">
