--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,14 @@
 
       <div class="pull-right user-info">
         <% if current_user %>
-           <%= current_user.name %> - <%= link_to "Sign Out", session_path(current_user), method: :delete %>
+        <div class="avatar">
+          <table>
+            <tr><td><%= current_user.name %></td>
+            <td rowspan="2"><%= image_tag avatar_url(current_user) %></td></tr>
+            <tr><td><%= link_to "Sign Out", session_path(current_user), method: :delete %></td></tr>
+          </table>
+
+        </div>
          <% else %>
            <%= link_to "Sign In", new_session_path %> or
            <%= link_to "Sign Up", new_user_path %>
