--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -18,6 +18,9 @@
      <%= f.label :description %>
      <%= f.text_area :description, rows: 8, class: 'form-control', placeholder: "Enter topic description" %>
   <% end %>
+  <div class="form-group">
+    <%= render partial: 'labels/form', locals: {f: f, labels: @topic.labels } %>
+  </div>
   <%= form_group_tag(topic.errors[:public]) do %>
      <%= f.label :public %>
      <%= f.check_box :public, class: 'formcheckbox'%>
