Assignment 42 topics comments

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,16 @@
 <div class="media">
-  <div class="media-body">
-    <small>
-      <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
-      <% if user_is_authorized_for_comment?(comment) %>
-      | <%= link_to "Delete", [@post, comment], method: :delete %>
-      <% end %>
-    </small>
-    <p><%= comment.body %></p>
-  </div>
-</div>
+   <div class="media-body">
+     <small>
+       <%= comment.user.name %> commented <%= time_ago_in_words(comment.created_at) %> ago
+       <% if user_is_authorized_for_comment?(comment) %>
+        <% if controller_name == "posts" %>
+         | <%= link_to "Delete", [@post, comment], method: :delete %>
+        <% end %>
+        <% if controller_name == "topics" %>
+          | <%= link_to "Delete", [@topic, comment], method: :delete %>
+        <% end %>
+       <% end %>
+     </small>
+     <p><%= comment.body %></p>
+   </div>
+ </div>
