--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -12,6 +12,7 @@
       <br />
       <%= @topic.description %>
     </p>
+
     <% @topic.posts.each do |post| %>
       <div class="media">
         <div class="media-body">
@@ -31,5 +32,12 @@
     <div class="col-md-4">
       <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
     </div>
+  <% end %>
+  <div>
+    <h3>Comments</h3>
+    <%= render @topic.comments %>
+  </div>
+  <% if current_user %>
+    <%= render 'comments/form', comment: Comment.new, topic: @topic %>
   <% end %>
 </div>
