--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,13 +10,13 @@
     <h2><%= @post.title %></p>
     <p><%= @post.body %></p>
   </div>
-  <% if user_is_authorized_for_post_edit?(@post) %>
     <div class="col-md-4">
+      <% if can_edit_post?(@post) %>
         <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
-        <% if user_is_authorized_for_post?(@post) %>
-          <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
-        <% end %>
+      <% end %>
+      <% if can_destroy_post?(@post) %>
+        <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
+      <% end %>
     </div>
-  <% end %>
 
 </div>
