--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,8 +19,18 @@
   </div>
 </div>
 
-<h2>Posts</h2>
-<%= render @user.comments %>
+<% if @user.posts_comments? %>
+  <h2>Posts</h2>
+  <%= render @user.posts %>
 
-<h2>Comments</h2>
-<%= render @user.comments %>
+  <h2>Comments</h2>
+  <%= render @user.comments %>
+<% else %>
+  <p><%= @user.name %> has not submitted any posts yet.</p>
+<% end %>
+
+<h2>Favorited Posts</h2>
+<% @user.favorites.each do |f| %>
+  <% avatar_url = f.post.user.avatar_url(128) %>
+  <p><%= f.post.title %><%= image_tag avatar_url, class: 'media-object' %> <%= f.post.comments.count %> comments   <%= f.post.votes.count %> votes </p>
+<% end %>
