--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,10 +19,14 @@
     <p><%= @post.body %></p>
     <div>
       <h3>Comments</h3>
-      <%= render @post.comments %>
+      <div class='js-comments'>
+        <%= render @post.comments %>
+      </div>
     </div>
     <% if current_user %>
+    <div class='new-comment'>
       <%= render 'comments/form', comment: Comment.new, post: @post %>
+    </div>
     <% end %>
   </div>
     <div class="col-md-4">
@@ -33,7 +37,7 @@
         <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
     <% end %>
     </div>
-  
+
   <div class="col-md-4">
     <h3>
       <%= pluralize(@post.points, 'point') %>
