--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,7 @@
-
+/*
+ *= require_self
+ *= require_tree .
+ */
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
@@ -8,4 +11,20 @@
 
  .nav {
    margin-top: 5px;
+   background-color: rgba(119, 136, 153, 0.6);
+ }
+
+ .nav li.main {
+   font-size: 30px;
+   margin-right: 30px;
+
+ }
+
+ .nav li.main a {
+   color: white;
+
+ }
+
+ .nav .user-info {
+   margin-right: 20px;
  }
