--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,33 @@
-// Place all the styles related to the welcome controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.jumbotron {
+  height: 300px;
+}
+
+.jumbotron .welcome {
+  text-align: center;
+}
+
+.jumbotron .doodle {
+  visibility: hidden;
+}
+
+.landing {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+@media (min-width: 1000px) {
+
+  .jumbotron .doodle {
+    visibility: visible;
+  }
+
+  .landing {
+    height: 150px;
+    border-left: 2px solid black;
+    border-right: 0px;
+    border-top: 0px;
+
+    text-align: left;
+
+  }
+}
