--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <ul class="nav nav-tabs">
-      <li><%= link_to "Bloccit", root_path %></li>
+      <li class="main"><%= link_to "Bloccit", root_path %></li>
       <li><%= link_to "Topics", topics_path %></li>
       <li><%= link_to "About", about_path %></li>
 
@@ -21,7 +21,7 @@
             <%= link_to current_user.name, user_path(current_user) %> <br/> <%= link_to "Sign Out", session_path(current_user), method: :delete %>
           </div>
         <% else %>
-           <%= link_to "Sign In", new_session_path %> or
+           <%= link_to "Sign In", new_session_path %> / 
            <%= link_to "Sign Up", new_user_path %>
          <% end %>
       </div>
