--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,11 +1,11 @@
-<h1><%= @topic.name %></h1>
+<div class="row topic">
+  <h1><%= @topic.name %></h1>
 
-<% if user_is_authorized_for_topics? %>
-  <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
-  <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?'} %>
-<% end %>
+  <% if user_is_authorized_for_topics? %>
+    <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
+    <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?'} %>
+    <% end %>
 
-<div class="row">
   <div class="col-md-8">
     <p class="lead">
       <%= render partial: "labels/list", locals: { labels: @topic.labels } %>
